# Rust-engine

./: Cargo.toml  README.md  build.rs
assets/scripting/: demo.lua
assets/scripts/: demo.lua
examples/: sandbox.rs
shaders/: pbr.frag  pbr.vert  shadow.vert
src/: lib.rs  main.rs
src/assets/: mod.rs
src/core/: mod.rs
src/gui/: mod.rs
src/physics/: mod.rs
src/renderer/: camera.rs  context.rs  debug.rs  material.rs  memory.rs  mesh.rs  mod.rs  pipeline.rs  renderpass.rs  shadow.rs  swapchain.rs
src/scene/: mod.rs
src/scripting/: mod.rs
